# game_breakout

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: ball.cpp  ball.hpp  brick.cpp  brick.hpp  collision.cpp  collision.hpp  main.cpp  paddle.cpp  paddle.hpp
src/UI/: FPSCounter.cpp  FPSCounter.hpp  GameStateText.cpp  GameStateText.hpp  UIManager.cpp  UIManager.hpp  score.cpp  score.hpp
src/core/: ball.cpp  ball.hpp  brick.cpp  brick.hpp  collision.cpp  collision.hpp  paddle.cpp  paddle.hpp
